cmake_minimum_required(VERSION 3.17)
project(Tarea_extraclase_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tarea_extraclase_2 main.cpp Builder/Casa.cpp Builder/Casa.h Builder/Builder.cpp Builder/Builder.h Builder/Director.cpp Builder/Director.h Facade/Facade.h Facade/Facade.cpp Facade/LogIn.h Facade/LogIn.cpp Facade/User.h Facade/User.cpp)